syntax = "proto3";
option go_package = "./pb";

package pb;

import "model_node_cluster.proto";

message Server {
	int64 id = 1;
	bytes config = 2;
	bytes includeNodes = 3;
	bytes excludeNodes = 4;
	int64 createdAt = 5;

	NodeCluster cluster = 6;
}
