syntax = "proto3";
option go_package = "./pb";

package pb;

import "model_cluster.proto";
import "model_node.proto";

service AdminService {
	// 登录
	rpc login (AdminLoginRequest) returns (AdminLoginResponse) {
	}

	// 创建操作日志
	rpc createLog (AdminCreateLogRequest) returns (AdminCreateLogResponse) {
	}

	// 检查管理员是否存在
	rpc checkAdminExists (AdminCheckAdminExistsRequest) returns (AdminCheckAdminExistsResponse) {
	}

	// 获取管理员名称
	rpc findAdminFullname (AdminFindAdminNameRequest) returns (AdminFindAdminNameResponse) {
	}

	// 获取所有集群的信息
	rpc findAllEnabledClusters (AdminFindAllEnabledClustersRequest) returns (AdminFindAllEnabledClustersResponse) {
	}

	// 创建节点
	rpc createNode (AdminCreateNodeRequest) returns (AdminCreateNodeResponse) {
	};

	// 节点数量
	rpc countAllEnabledNodes (AdminCountAllEnabledNodesRequest) returns (AdminCountAllEnabledNodesResponse) {
	};

	// 列出单页节点
	rpc listEnabledNodes (AdminListEnabledNodesRequest) returns (AdminListEnabledNodesResponse) {

	}
}

message AdminLoginRequest {
	string username = 1;
	string password = 2;
}

message AdminLoginResponse {
	int64 adminId = 1;
	bool isOk = 2;
	string message = 3;
}

message AdminCreateLogRequest {
	string level = 1;
	string description = 2;
	string action = 3;
	string ip = 4;
}

message AdminCreateLogResponse {
	bool isOk = 1;
}

message AdminCheckAdminExistsRequest {
	int64 adminId = 1;
}

message AdminCheckAdminExistsResponse {
	bool isOk = 1;
	string message = 2;
}


message AdminFindAdminNameRequest {
	int64 adminId = 1;
}

message AdminFindAdminNameResponse {
	string fullname = 1;
}

message AdminFindAllEnabledClustersRequest {

}

message AdminFindAllEnabledClustersResponse {
	repeated Cluster clusters = 1;
}

// 创建节点
message AdminCreateNodeRequest {
	string name = 1;
	int64 clusterId = 2;
}

message AdminCreateNodeResponse {
	int64 nodeId = 1;
}

// 节点数量
message AdminCountAllEnabledNodesRequest {

}

message AdminCountAllEnabledNodesResponse {
	int64 count = 1;
}

// 列出单页节点
message AdminListEnabledNodesRequest {
	int64 offset = 1;
	int64 size = 2;
}

message AdminListEnabledNodesResponse {
	repeated Node nodes = 1;
}